# taskflow-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1942546379c3_create_tasks_table.py  899ca0c88077_create_users_table.py
app/: dependencies.py  main.py
app/core/: config.py  database.py  security.py
app/models/: task.py  user.py
app/routers/: auth.py  tasks.py  users.py
app/schemas/: task.py  user.py
tests/: conftest.py
tests/routers/: test_auth.py  test_tasks.py
